Use SequencedCollection getFirst/getLast in the event stores (#275)
Replace list.get(0) / list.get(list.size() - 1) with getFirst() / getLast()
in the event-store main code now that the baseline is Java 21. Clearest in
InMemoryEventStore, where a firstPosition/lastPosition pair reads directly as
getFirst()/getLast(). All sites are on Lists that are non-empty by an
enclosing guard, so behavior is unchanged. Test call sites are left alone, since
get(0) there is already clear.

Co-authored-by: Claude Opus 4.8 <noreply@anthropic.com>